--- a/Home/style.css
+++ b/Home/style.css
@@ -1,9 +1,7 @@
-:root {
-    --main-color: #d3ad7f;
-    --black: #13131a;
-    --bg: #4043ff;
+:root { /* Variavel*/
+    --main-color: #3a3df1;
+    --black: #131010;
     --white: #ffffff;
-    --border: 0.1rem solid var(--white);
 }
 
 
@@ -14,51 +12,84 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
-body {
-    background-color: var(--bg);
-    padding-top: 90px;
-}
-
-
+/* Logo */
 .header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
 
-    height: 80px;
-    background-color: var(--black);
+    height: 70px;;
     border-bottom: var(--border);
+    background-color: #3a3df1;
 
     display: flex;
     align-items: center;
+
 }
+.header h1{
+    color: #ffffff;
 
-
+}
 .logo {
-    position: absolute;
+    display: flex;
+    gap: 10px;
+    position: flex;
     left: 20px;
 }
 
 .logo img {
     width: 40px;
-}
 
+}
+/* ----------------------- */
+
+/* botões Menu */
 .botoes {
     margin: 0 auto;
     display: flex;
     gap: 20px;
 }
 .botao {
-    padding: 10px 20px;
+    padding: 10px 20px ;
     background-color: var(--main-color);
     color: var(--black);
     font-weight: bold;
     border-radius: 6px;
     transition: 0.3s;
 }
-.btn:hover {
-    background-color: var(--white);
+.botao:hover {
+    background-color: #dddcdc;
+
 }
+.botoes a{
+    color: #ffffff;
+}
+/* ----------------------- */
+/* boby */
+
+body{
+    background-color:#FFFFFF;
+     margin: 0;
+     padding: 0;
+}
+
+.container{
+ width: 110%;
+ height: 250px;
+ padding: 20px;
+ justify-content: center;
+ align-items: center;
+ display: grid;
+ text-align: center;
+}
+.box {
+    background-color: #000;   
+    color: #fff;             
+    padding: 2rem;
+    border-radius: 25px;
+    width: 300px;            
+    text-align: center;
+}
+
+
